--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       default-src 'self';
       font-src 'self' data: https://fonts.gstatic.com;
       script-src 'self' 'unsafe-inline' https://js.stripe.com https://api.hcaptcha.com;
-      connect-src 'self' http://localhost:3001 https://pvtqvasjbuihcrexfvho.supabase.co https://api.hcaptcha.com https://api.stripe.com;
+      connect-src 'self' http://localhost:3001 https://pvtqvasjbuihcrexfvho.supabase.co https://api.hcaptcha.com https://api.stripe.com https://fengshui-backend-4i5o.onrender.com;
       img-src 'self' data: https://*;
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
 
